# Firmware

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Firmware.csproj  Firmware.sln  Hardware.vcxproj  Hardware.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Tests/: CMakeLists.txt
src/Hardware-stamp/: Hardware-gitinfo.txt
tmp/: Hardware-gitclone.cmake  Hardware-gitupdate.cmake  Hardware-mkdirs.cmake
x64/Release/ALL_BUILD/: ALL_BUILD.recipe  ALL_BUILD.vcxproj.AssemblyReference.cache  ALL_BUILD.vcxproj.FileListAbsolute.txt
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/Hardware/: Hardware.recipe
x64/Release/Hardware/Hardware.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
